--- a/flask/templates/how.html
+++ b/flask/templates/how.html
@@ -1,1 +1,10 @@
 {% extends "base.html" %}
+
+{% block title %} How to Build {% endblock %}
+
+
+{% block content %} 
+
+<div> <p>Pre-requesites: </p></div>
+
+{%endblock%}
